--- a/CSS/style.css
+++ b/CSS/style.css
@@ -24,6 +24,33 @@ body {
     color: var(--bg-color);
     background: var(--container-color);
 }
+h1 {
+    font-size: 50px;
+    line-height: 64px;
+    color: var(--bg-color);
+ }
+
+ h2 {
+    font-size: 46px;
+    line-height: 54px;
+    color: var(--bg-color);
+ }
+
+ h4 {
+    font-size: 20px;
+    color: var(--bg-color);
+ }
+
+ h6 {
+    font-weight: 700;
+    font-size: 12px;
+ }
+
+ p {
+    font-size: 16px;
+    color: var(--bg-color);
+    margin: 15px 0 20px 0;
+ }
 .section-p1 {
     padding: 40px 80px;
 }
@@ -416,6 +443,22 @@ header {
     text-align: center;
  }
 
+ /* About Page */
+ #page-header h2,
+ #page-header p{
+   width: 100%;
+   padding: 0px 0px;
+   display: flex;
+   text-align: center;
+   justify-content: center;
+   flex-direction: column;
+ }
+
+ #about-head img{
+    position: relative;
+    top: -20px;
+    width: 50%;
+ }
 /* Making Responsive */
 @media (max-width: 1080px) {
     .nav {
